--- a/Fb-Login/src/Login.css
+++ b/Fb-Login/src/Login.css
@@ -4,11 +4,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: white;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  background: #f2f4f7;
+  background: #000000;
 }
 
 .content {
@@ -31,13 +32,18 @@ body {
 .name-content .logo {
   font-size: 3.5rem;
   color: #1877f2;
+  font-weight: 500;
 }
 
 .name-content p {
   font-size: 1.3rem;
-  font-weight: 500;
+  font-weight: bolder;
   margin-bottom: 5rem;
 }
+
+   
+
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
@@ -46,14 +52,14 @@ body {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   font-family: "Poppins", sans-serif;
-  background: #f2f4f7;
-}
+  background: #666666;
+} */
 
 .content {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -62,6 +68,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+
 }
 
 .name-content {
@@ -70,13 +77,14 @@ body {
 
 .name-content .logo {
   font-size: 3.5rem;
+  font-weight: bold; 
   color: #1877f2;
 }
 
 .name-content p {
   font-size: 1.3rem;
-  font-weight: 500;
   margin-bottom: 5rem;
+  font-weight: normal;
 }
 
 form {
@@ -116,16 +124,25 @@ form .login:hover {
   cursor: pointer;
 }
 
-form a {
+ .ar {
   text-decoration: none;
   text-align: center;
   font-size: 1rem;
   padding-top: 0.8rem;
   color: #1877f2;
+  border-radius: 10%;
+  background: white;
+  text-decoration: none;
+}
+
+.pr2{
+    font-size: 0.9rem;
+    text-align: center;
+    background-color: none;
 }
 
 form hr {
-  background: #f7f7f7;
+  background: #ffffff;
   margin: 1rem;
 }
 
@@ -146,124 +163,4 @@ form .create-account:hover {
   cursor: pointer;
 }
 
-/* //.........Media Query.........// */
 
-@media (max-width: 500px) {
-  html {
-    font-size: 60%;
-  }
-
-  .name-content {
-    margin: 0;
-    text-align: center;
-  }
-
-  form {
-    width: 300px;
-    height: fit-content;
-  }
-
-  form input {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-  }
-
-  form .login {
-    font-size: 1.5rem;
-  }
-
-  form a {
-    font-size: 1.5rem;
-  }
-
-  form .create-account {
-    font-size: 1.5rem;
-  }
-
-  .flex-div {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media (min-width: 501px) and (max-width: 768px) {
-  html {
-    font-size: 60%;
-  }
-
-  .name-content {
-    margin: 0;
-    text-align: center;
-  }
-
-  form {
-    width: 300px;
-    height: fit-content;
-  }
-
-  form input {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-  }
-
-  form .login {
-    font-size: 1.5rem;
-  }
-
-  form a {
-    font-size: 1.5rem;
-  }
-
-  form .create-account {
-    font-size: 1.5rem;
-  }
-
-  .flex-div {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-  html {
-    font-size: 60%;
-  }
-
-  .name-content {
-    margin: 0;
-    text-align: center;
-  }
-
-  form {
-    width: 300px;
-    height: fit-content;
-  }
-
-  form input {
-    margin-bottom: 1rem;
-    font-size: 1.5rem;
-  }
-
-  form .login {
-    font-size: 1.5rem;
-  }
-
-  form a {
-    font-size: 1.5rem;
-  }
-
-  form .create-account {
-    font-size: 1.5rem;
-  }
-
-  .flex-div {
-    display: flex;
-    flex-direction: column;
-  }
-
-  @media (orientation: landscape) and (max-height: 500px) {
-    .header {
-      height: 90vmax;
-    }
-  }  
-}
